--- a/package.json
+++ b/package.json
@@ -24,6 +24,14 @@
     "start": "gulp serve"
   },
   "devDependencies": {
+    "bootstrap": "3.3.7",
+    "jquery": "1.11",
+    "angular-ui-bootstrap": "2.1.4",
+    "babel-core": "6.10.4",
+    "babel-preset-es2015": "6.9.0",
+    "gulp": "3.9.1",
+    "lodash": "4.13.1",
+    "proxyquire": "1.7.9"
    },
   "dependencies": {},
   "commitplease": {
